--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>My AngularJS App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app/css/app.css">
+    <link rel="stylesheet" href="/dist/css/app.min.css">
+    <base href="/">
 </head>
 <body>
-    <div class=""><a href="#/">home</a> | <a href="#/courses">courses</a> | <a href="#/about">about</a> | <a href="#/qwerty">invalid route</a></div>
+    <div class=""><a href="/">home</a> | <a href="/courses">courses</a> | <a href="/about">about</a> | <a href="/qwerty">invalid route</a></div>
     <hr />
 
     <div ng-view></div>
@@ -17,10 +18,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
 
-    <script src="app/js/app.js"></script>
-
-    <script src="app/js/controllers/AboutController.js"></script>
-    <script src="app/js/controllers/CoursesController.js"></script>
-    <script src="app/js/controllers/HomeController.js"></script>
+    <script src="/dist/js/app.min.js"></script>
 </body>
 </html>
