--- a/index.html
+++ b/index.html
@@ -6,18 +6,41 @@
     <title>My AngularJS App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/dist/css/app.min.css">
     <base href="/">
 </head>
 <body>
-    <div class=""><a href="/">home</a> | <a href="/courses">courses</a> | <a href="/about">about</a> | <a href="/qwerty">invalid route</a></div>
-    <hr />
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
 
+        <span class="navbar-brand glyphicon glyphicon-book" aria-hidden="true"></span>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/courses">Courses</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
     <div ng-view></div>
+</div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="/dist/js/app.min.js"></script>
 
-    <script src="/dist/js/app.min.js"></script>
 </body>
 </html>
