--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/components/angular-toastr/dist/angular-toastr.css">
     <link rel="stylesheet" href="/dist/css/app.min.css">
     <base href="/">
 </head>
@@ -40,7 +41,14 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="/dist/js/app.min.js"></script>
+
+<script src="/components/ng-websocket/ng-websocket.js"></script>
+<script src="/components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+
+<script src="/app/js/app.js"></script>
+<script src="/app/js/controllers/AboutController.js"></script>
+<script src="/app/js/controllers/CoursesController.js"></script>
+<script src="/app/js/controllers/HomeController.js"></script>
 
 </body>
 </html>
