Moves websockets and API logics from controller to services

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <script src="/components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
 <script src="/app/js/app.js"></script>
+<script src="/app/js/factories/ApiService.js"></script>
+<script src="/app/js/factories/Websocket.js"></script>
 <script src="/app/js/controllers/AboutController.js"></script>
 <script src="/app/js/controllers/CoursesController.js"></script>
 <script src="/app/js/controllers/HomeController.js"></script>
