Adds google oauth [WIP]

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/courses">Courses</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/profile">Profile</a></li>
         </ul>
     </div>
 </nav>
@@ -46,11 +47,16 @@
 <script src="/components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
 <script src="/app/js/app.js"></script>
+
 <script src="/app/js/factories/ApiService.js"></script>
 <script src="/app/js/factories/Websocket.js"></script>
+
 <script src="/app/js/controllers/AboutController.js"></script>
 <script src="/app/js/controllers/CoursesController.js"></script>
+<script src="/app/js/controllers/LoginController.js"></script>
+<script src="/app/js/controllers/OAuthController.js"></script>
 <script src="/app/js/controllers/HomeController.js"></script>
+<script src="/app/js/controllers/ProfileController.js"></script>
 
 </body>
 </html>
